# DynELA-v.-4.0

./: COMMANDS.txt  Changelog.md  LICENSE  README.md  Windows-Install.md
Benchmarks/benchmarksTests/: Makefile  polarDecompose.C
Documentation/: Cover.odp  Development-Boundary.tex  Development-Elements.tex  Development-FEM.tex  Development-Kernel.tex  Development-Materials.tex  Development-Maths.tex  DynELA.tex  ElementSamples.tex  History.tex  ImpactSamples.tex  Installation.tex  Makefile  NotationsMec.tex  Private.bib  Programming-AbaqusExtract.tex  Programming-Curves.tex  Programming-Language.tex  ProgrammingAbaqusExtract.tex  ProgrammingCurves.tex  ProgrammingLanguage.tex  Samples-Impacts.tex  Samples-OneElement.tex  Samples-Plasticity.tex  Theory-Introduction.tex  cleanDocumentation  macrosHyperlink.tex  unrefDocumentation  updateDocumentation
Documentation/Figures/: Cover.odp
Samples/: Element.cpp
Samples/BarNecking/: Makefile
Samples/Element/: Makefile
Samples/PlateNecking/: Makefile  PlateNecking.py  runBench.py
Samples/Taylor/: Makefile
Sources/: CMakeLists.txt  Doxyfile
Sources/dnlBC/: Boundary.C  Boundary.h  BoundaryAcceleration.C  BoundaryAcceleration.h  BoundaryCondition.C  BoundaryCondition.h  BoundaryConvection.C  dnlBC.h  (+14 more)
Sources/dnlMaths/: CMakeLists.txt  ColorMap.C  ColorMap.h  DiscreteFunction.C  DiscreteFunction.h  DiscreteFunctionSet.C  DiscreteFunctionSet.h  Eigen3x3.C  Eigen3x3.h  Function.C  Function.h  Matrices.h  Matrix.C  Matrix.h  MatrixDiag.C  MatrixDiag.h  NumpyInterface.C  NumpyInterface.h  PolynomialFunction.C  PolynomialFunction.h  RampFunction.C  RampFunction.h  SinusFunction.C  SinusFunction.h  SymTensor2.C  SymTensor2.h  Tensor2.C  Tensor2.h  Tensor3.C  Tensor3.h  Tensor4.C  Tensor4.h  Vec3D.C  Vec3D.h  Vector.C  Vector.h  dnlMaths.h
Sources/tests/: CMakeLists.txt  Element.cpp
Templates/: CMakeList  C_File  H_File  Makefile-documentation  Makefile-samples-abaqus  Makefile-samples-dynela  Makefile-samples-subdirs  inc_File  macrosGene.template  macrosHyperlinkEnglish.template  propagate
(+161 files in other folders)
