INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dnlFEM)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dnlKernel)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dnlMaths)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dnlElements)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dnlMaterials)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dnlBC)

# Search for OpenMP
FIND_PACKAGE(OpenMP REQUIRED)

if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

# Non optimized version
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
# Optimized version
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O3")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O3 -ffast-math")

add_executable (element element.cpp)
target_link_libraries(element dnlFEM)